More comments to debug GH Action